syntax = "proto3";

import "common.proto";

option go_package = "github.com/adarshsrinivasan/PressAndPlay/libraries/proto";

// Interface exported by the server.
service User {
  // GetUser - takes UserModel with only id populated as input and returns complete UserModel
  rpc GetUser(UserModel) returns (UserModel) {}
}

enum Gender {
  GENDER_FEMALE = 0;
  GENDER_MALE = 1;
  GENDER_OTHERS = 2;
}

enum Role {
  ROLE_CUSTOMER = 0;
  ROLE_MANAGER = 1;
}

message UserModel {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string dateOfBirth = 4;
  Gender gender = 5;
  Address address = 6;
  string Phone = 7;
  Role role = 8;
  string email = 9;
  string password = 10;
  bool verified = 11;
}